--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,16 @@
 org-clones-edit.el
 /#org-clones-edit.el#
 /#org-clones-ert.org#
+/#README.org#
+/#org-clones-ert-2.org#
+/#org-clones-ert.el#
+/#org-clones.el#
+/#test.org#
+/#test1.org#
+/#test2.org#
+/org-clones-ert-2.org
+/org-clones-ert.el
+/org-clones-ert.org
+/org-clones.elc
+/test1.org
+/test2.org
