--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ org-clones-edit.el
 /org-clones-scratch.el
 test.org
 test1.org
+/#speed-test-sample.org#
+/#speed-test.org#
+/speed-test-sample.org
+/speed-test.org
