--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ test1.org
 /#speed-test.org#
 /speed-test-sample.org
 /speed-test.org
+/#test666.org#
+/#test999.org#
+/clones.el
+/temp.el
+/test666.org
+/test999.org
