--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,23 @@ test1.org
 /#clones.el#
 /#test5.org#
 /test5.org
+/#asdfasdf.org#
+/#qq.org#
+/#test444.org#
+/#test6.org#
+/#test667.org#
+/#test777.org#
+/#xxxxx.org#
+/.#qq.org
+/.#xxxxx.org
+/asdfasdf.org
+/asdfasdfasdf.org
+/asdfasdfasdf.org~
+/llllllllll.org
+/llllllllll.org~
+/qq.org
+/test222.org
+/test444.org
+/test6.org
+/test667.org
+/xxxxx.org
