--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,8 @@ test1.org
 /test6.org
 /test667.org
 /xxxxx.org
+/TEST/#org-clones-ert.el#
+/TEST/#org-clones-ert.org#
+/TEST/#test.org#
+/TEST/#test1.org#
+/TEST/org-clones-ert.org
