--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ test1.org
 /TEST/#test.org#
 /TEST/#test1.org#
 /TEST/org-clones-ert.org
+/TEST/#org-clones-ert-tests.org#
+/TEST/org-clones-ert-tests.org
